mainnet/overlays/networking/gateway-peers.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: mainnet-node-peers1
  namespace: gw-mainnet 
spec:
  bindAddress: '::'
  bindPort: 23856 
  tcpGateway:
    tcpHosts:
    - name: mainnet-node-peers1
      destination:
        single:
          upstream:
            name: mainnet-pocket-core-1-26656 
            namespace: gw-mainnet
  useProxyProto: false
---
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: mainnet-node-peers2
  namespace: gw-mainnet 
spec:
  bindAddress: '::'
  bindPort: 24856 
  tcpGateway:
    tcpHosts:
    - name: mainnet-node-peers2
      destination:
        single:
          upstream:
            name: mainnet-pocket-core-2-26656 
            namespace: gw-mainnet
  useProxyProto: false
